[package]
name = "gateway-keys"
version = "0.1.0"
authors = ["lifu <lifu@nextbillion.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.116"
log = "0.4.0"
env_logger = "0.7.1"
actix = "0.10.0"
simple-error = "0.2.2"
futures = "0.1.30"
actix-cors = "0.4.1"
serde_yaml = "0.8.13"
nbroutes-util = { git = "https://git.nextbillion.io/zhchang/nbroutes-util", branch="master"}
tokio = { version="0.2.22", features = ["full"] }
tokio-postgres = "0.5.0"
postgres-native-tls = "0.3.0"
postgres-types = "0.1.3"
postgres-openssl = "0.3.0"
openssl = "0.10.30"
actix-rt = "1.1.1"
tokio-timer = "0.2.13"