[package]
name = "gateway-keys"
version = "0.1.0"
authors = ["lifu <lifu@nextbillion.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.116"
serde_derive = "1.0.118"
log = "0.4.0"
env_logger = "0.7.1"
actix = "0.10.0"
simple-error = "0.2.2"
futures = "0.3"
actix-cors = "0.4.1"
serde_yaml = "0.8.13"
serde_json = "1.0.60"
nbroutes-util = { git = "https://github.com/nextbillion-ai/nbroutes-util", branch="master"}
#nbroutes-util = { path = "../nbroutes-util" }
tokio = { version="1.8.1", features = ["full"] }
postgres = "0.19.0"
postgres-native-tls = "0.3.0"
postgres-types = "0.1.3"
postgres-openssl = "0.5.0"
openssl = "0.10.30"
actix-rt = "1.1.1"
tokio-timer = "0.2.13"
jwt = { version="0.11.0", features=["openssl"]}
smpl_jwt = "0.5.0"
jwks-client = "0.1.4"
hmac = "0.10.1"
sha2 = "0.9.2"
